src/assets/main.css
* {
    box-sizing: border-box;
    --primary-color: #000000;
    --secondary-color: #919191;
    --background-color: #ffffff;
}

body, html {
    margin: 0;
    padding: 0;
}

body {
    font-family: Roboto, Arial, Helvetica, sans-serif;
    color: var(--primary-color);
    background-color: var(--background-color);
}

/* #app {
    padding: 25px;
} */

h1 {
    font-size: 2.5em;
}

h2 {
    font-size: 2em;
}

h3 {
    font-size: 1.5em;
}

/* .centered {
    padding-left: max(calc((100vw - 1280px) / 2), 25px);
    padding-right: max(calc((100vw - 1280px) / 2), 25px);
} */

.wood-background {
    background-image: url(imgs/wood-bg.jpg);
    background-attachment: fixed;
    padding-top: 50px;
    padding-bottom: 50px;
    color: white;
}

.centered, .wood-background .content {
    max-width: 1280px;
    margin-left: auto;
    margin-right: auto;
}

.buttonLink {
    display: inline-block;
    text-decoration: none;
    background-color: var(--secondary-color);
    color: var(--primary-color);
    padding: 12px;
    border-radius: 10px;
    font: inherit;
}

@media (prefers-color-scheme: dark) {
    * {
        --primary-color: #ffffff;
        --secondary-color: #414141;
        --background-color: #000000;
    }
}

